--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
+    "clsx": "^1.1.1",
     "react": "17.0.1",
-    "react-beautiful-dnd": "13.0.0",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.2",
+    "react-smooth-dnd": "^0.11.1",
+    "styled-components": "^5.3.0",
     "web-vitals": "1.0.1"
   },
   "scripts": {
